deploy/custom/k8s/ingresscontroller/ingress-webapp.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-mywebspa
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/ssl-redirect: "false"
    # kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: webspa.my
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webspa
            port:
              number: 80
  - host: identity.webspa.my
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: identity-api
            port:
              number: 80
  - host: webapigw.webspa.mysignalrhub.webspa.my
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webshopapigw
            port:
              number: 80
  - host: signalrhub.webspa.my
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: orderssignalrhub
            port:
              number: 80
  ingressClassName: nginx
